service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-pod1
spec:
  selector:
    app: apache-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: app2-pod2
spec:
  selector:
    app: apache-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
