ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saaritdevops-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /pod1
        pathType: Prefix
        backend:
          service:
            name: app1-pod1
            port:
              number: 80
  - host: 
    http:
      paths:
      - path: /pod2
        pathType: Prefix
        backend:
          service:
            name: app2-pod2
            port:
              number: 80
